@@ -1,3 +1,6 @@
+2008-05-11  Perry McFarlane  <perry_m@fastmail.fm>
+* dos/atari_vga.c, configure.ac: Atari_PaletteUpdate
+
 2008-05-10  Perry McFarlane  <perry_m@fastmail.fm>
 * mzpokeysnd.c, pokyemix.inc: use shorts for smaller file size with table
 
